# game_of_life

PROJET/: CMakeLists.txt
PROJET/src/: main.cpp
PROJET/src/functions/: hello_world.cpp  hello_world.hpp
